Bug 412306 - The HDR settings tab is empty with no message on non HDR systems
Summary: The HDR settings tab is empty with no message on non HDR systems
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-25 07:03 UTC by Raghavendra kamath
Modified: 2019-10-04 08:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Empty HDR settings dialog (55.78 KB, image/png)
2019-09-25 07:06 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2019-09-25 07:03:35 UTC
SUMMARY
On non HDR systems the HDR Settings tab under the display section in the configure Krita dialog is empty. If the system does not support HDR then there must be either 

1) settings greyed out 
or
2) A message saying that there is no HDR support for the device.

STEPS TO REPRODUCE
1. Open krita on Non HDR system and go to Configure Krita > Display > HDR settings

Operating System: Arch Linux 
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.13.1
Kernel Version: 5.3.1-arch1-1-ARCH
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 15.6 GiB of RAM
Comment 1 Raghavendra kamath 2019-09-25 07:06:14 UTC
Created attachment 122853 [details]
Empty HDR settings dialog

Attaching a screenshot of the empty settings dialog
Comment 2 wolthera 2019-09-26 14:58:47 UTC
Git commit 8ef91fb3f995c83d82cf61d56f08866f6b0401a4 by Wolthera van Hövell tot Westerflier.
Committed on 26/09/2019 at 14:58.
Pushed by woltherav into branch 'master'.

Remove HDR tab when HDR is not present.

This will remove the whole tab instead of just the settings group.
As HDR cannot be magically added in the middle of a session, this
should work appropriately.

M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.cc
M  +3    -3    libs/ui/forms/wdgdisplaysettings.ui

https://invent.kde.org/kde/krita/commit/8ef91fb3f995c83d82cf61d56f08866f6b0401a4
Comment 3 Halla Rempt 2019-10-04 08:01:27 UTC
Git commit 2fd2c26e69aa927a6573bc757fa911db749f0df4 by Boudewijn Rempt, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 04/10/2019 at 07:55.
Pushed by rempt into branch 'krita/4.2'.

Remove HDR tab when HDR is not present.

This will remove the whole tab instead of just the settings group.
As HDR cannot be magically added in the middle of a session, this
should work appropriately.
(cherry picked from commit 8ef91fb3f995c83d82cf61d56f08866f6b0401a4)

M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.cc
M  +3    -3    libs/ui/forms/wdgdisplaysettings.ui

https://invent.kde.org/kde/krita/commit/2fd2c26e69aa927a6573bc757fa911db749f0df4