Remove HDR tab when HDR is not present.

This will remove the whole tab instead of just the settings group.
As HDR cannot be magically added in the middle of a session, this
should work appropriately.

BUG:412306
(cherry picked from commit 8ef91fb3f995c83d82cf61d56f08866f6b0401a4)